syntax = "proto3";

package com.amazonaws.services.schemaregistry.tests.protobuf.syntax3.basic;

message Parent {
  message NestedConflictingClassName {
    string name = 3;
  }
}
